[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "weebcentral downloader"
version = "0.0.1"
description = "cli manga downloader"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"

authors = [
    {name = "Rebin Mahmoudi", email = "rebinmahmoudi14@gmail.com"},
]

keywords = ["cli", "manga", "downloader", "weebcentral", "batch-downloader"]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests[socks]", 
    "rich", 
    "BeautifulSoup4",
    'importlib-metadata; python_version<"3.10"'
]


[project.scripts]
weebcentral-dl = "weebcentral.main:main"
